<resources>
    <string name="app_name">BookShor</string>
    <string name="lbl_want_to_sale_a_book">Want to sale a book?</string>
    <string name="lbl_please_fill_the_details">Please fill the details!</string>
    <string name="lbl_btn_sale_a_book">Sale a Book</string>
    <string name="lbl_book_name">Book Name</string>
    <string name="lbl_author_name">Author Name</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_contact">Contact</string>
    <string name="lbl_choose_image">Choose Image</string>
    <string name="lbl_note">*Note: Currently only cash on delivery option available. Make sure when your book arrive, be ready with cash.</string>
    <string name="lbl_pin">Pincode</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_city">City</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_house_no">Flat/House No</string>
    <string name="lbl_place_order">Place Order</string>
    <string name="lbl_det_name">Name:</string>
    <string name="lbl_det_author">Author:</string>
    <string name="lbl_det_description">Description:</string>
    <string name="lbl_det_contact">Contact:</string>
    <string name="lbl_det_price">Price:</string>
    <string name="lbl_buy">Buy</string>
    <string name="lbl_welcome_back">Hi, Welcome back</string>
    <string name="lbl_login_here">Login here</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_don_t_have_account">Don\'t have Account?</string>
    <string name="lbl_signup">SignUp</string>
    <string name="lbl_welcome_to_book">Welcome to BookShor</string>
    <string name="lbl_choose_one">Choose one:</string>
    <string name="lbl_buy_a_book">Buy a Book</string>
    <string name="lbl_sale_a_book">Sale a Book</string>
    <string name="lbl_skip"><![CDATA[Skip >]]></string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_already_have_account">Already have Account?</string>
</resources>