<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.BookBuyActivity"
    tools:ignore="hardCodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:layout_weight="0"
        android:background="@color/sky_500"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_backs" />

        <TextView
            android:id="@+id/txt_name"
            style="@style/CommonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@color/sky_500"
            android:ellipsize="end"
            android:fontFamily="@font/sen_regular"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/lbl_book_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bookImg"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_180sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/lbl_det_name" />

                    <TextView
                        android:id="@+id/txt_book_name"
                        style="@style/DetailTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_book_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/lbl_det_author" />

                    <TextView
                        android:id="@+id/txt_author_name"
                        style="@style/DetailTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_author_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/lbl_det_description" />

                    <TextView
                        android:id="@+id/txt_description"
                        style="@style/DetailTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_description" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/lbl_det_contact" />

                    <TextView
                        android:id="@+id/txt_contact"
                        style="@style/DetailTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_contact" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/lbl_det_price" />

                    <TextView
                        android:id="@+id/txt_price"
                        style="@style/DetailTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_price" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBuy"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_weight="0"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/lbl_buy"
        android:textSize="@dimen/_16ssp"
        app:cornerRadius="@dimen/_14sdp"
        app:elevation="0dp" />

</LinearLayout>