<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_10sdp"
    tools:context=".ui.BookSaleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_weight="0"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_want_to_sale_a_book" />

        <TextView
            style="@style/TextSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_please_fill_the_details"
            android:textSize="@dimen/_18ssp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_4sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_book_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/lbl_book_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_author_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/lbl_author_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_description"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@color/transparent"
                    android:hint="@string/lbl_description"
                    android:inputType="text"
                    android:maxLines="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/lbl_price"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/lbl_contact"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:text="@string/lbl_choose_image"
                    android:textSize="@dimen/_12ssp" />

                <ImageView
                    android:id="@+id/bookImg"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_launcher_background" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSale"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_weight="0"
        android:backgroundTint="@color/red"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/lbl_btn_sale_a_book"
        android:textSize="@dimen/_16ssp"
        app:cornerRadius="@dimen/_14sdp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</LinearLayout>