<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.OnBoardingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_welcome_to_book"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/lbl_name"
            style="@style/TextSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_60sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:src="@drawable/ic_launcher" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/TextSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_choose_one"
            android:textAlignment="center"
            android:textSize="@dimen/_18ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuy"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/lbl_buy_a_book"
            android:textSize="@dimen/_16ssp"
            app:cornerRadius="@dimen/_14sdp"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:backgroundTint="@color/red"
            android:id="@+id/btnSale"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/lbl_sale_a_book"
            android:textSize="@dimen/_16ssp"
            app:cornerRadius="@dimen/_14sdp"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSkip"
        style="@style/ButtonStyle"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_10sdp"
        android:layout_weight="0"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/lbl_skip"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</LinearLayout>